language_tests/source_files/valid/break_continue_expression_match_arm_check.tr
// CHECK_ONLY

func spinUntilDone() -> int32 {
    var state: int32 = 0

    loop {
        match state {
            case 0 => {
                state = 1
                continue
            }
            case _ => break
        }
    }

    state
}

func main() {
    let _ = spinUntilDone()
}
